Fixing overflow bug on the homepage

--- a/source/stylesheets/pages/index.scss
+++ b/source/stylesheets/pages/index.scss
@@ -48,6 +48,8 @@
 }
 
 .x-why {
+    overflow-x: hidden;
+
     .x-h2 {
         text-align: center;
     }
